--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
+blinker==1.6.2
 click==8.1.3
+colorama==0.4.6
 Flask==2.3.2
+Flask-WTF==1.2.1
+freetype-py==2.3.0
 gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+mysqlclient==2.1.1
+packaging==23.2
+Pillow==9.5.0
+psycopg2==2.9.6
+pycairo==1.23.0
+pypng==0.20220715.0
+qrcode==7.4.2
+reportlab==4.0.0
+rlPyCairo==0.2.0
+typing_extensions==4.5.0
 Werkzeug==2.3.4
-
+WTForms==3.1.1
